# ScrapeTool

./: README.md  pyproject.toml
scrapingtool/: main.py  neweggclient.py
scrapingtool/data_files/: test_products.csv  test_products_500.csv
src/scraping_tool/: main.py  neweggclient.py
src/scraping_tool/data_files/: test_products.csv
tests/: test_newegg_client.py
