[tool.poetry]
name = "scrapingtool"
version = "0.1.0"
description = ""
authors = ["Aleksandar Velkoski"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.11.1"
selenium = "^4.7.2"
requests = "^2.28.2"
pylint = "^2.15.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
